--- a/package.json
+++ b/package.json
@@ -1,6 +1,34 @@
 {
   "name": "kiddo-step",
   "version": "1.0.0",
+  "authors": [
+    {
+      "name": "Pedro Manuel Kalueka",
+      "email": "pedrokalueca@gmail.com"
+    },
+    {
+      "name": "Tiago Pedro Menenga Bondo",
+      "email": "tiagopedromenengabondo@gmail.com"
+    }
+  ],
+  "keywords": [
+    "tracker",
+    "kiddo",
+    "step",
+    "pedometer",
+    "pedometer-tracker",
+    "pedometer-tracker-app",
+    "pedometer-tracker-app-kiddo",
+    "routes",
+    "routes-tracker",
+    "gps",
+    "gps-tracker",
+    "gps-tracker-app",
+    "gps-tracker-app-kiddo",
+    "parental",
+    "parental-control",
+    "parental-control-app"
+  ],
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
