--- a/package.json
+++ b/package.json
@@ -38,13 +38,12 @@
   },
   "dependencies": {
     "@expo-google-fonts/open-sans": "^0.2.3",
-    "@expo/webpack-config": "^19.0.0",
+    "@react-navigation/native": "^6.1.9",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react-hook-form": "^7.49.2",
     "react-native": "0.72.6",
-    "react-native-web": "~0.19.6",
     "react-native-safe-area-context": "4.6.3"
   },
   "devDependencies": {
