--- a/package.json
+++ b/package.json
@@ -38,12 +38,16 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-hook-form": "^7.49.2",
     "react-native": "0.72.6",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-safe-area-context": "4.6.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
