--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "react-native-paper": "^4.12.6",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "@react-native-community/datetimepicker": "7.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
