--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "@expo-google-fonts/open-sans": "^0.2.3",
+    "@gorhom/bottom-sheet": "^4.6.1",
     "@hookform/resolvers": "^3.3.4",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-picker/picker": "2.4.10",
@@ -53,6 +54,7 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-modalize": "^2.1.1",
     "react-native-paper": "^4.12.6",
+    "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "yup": "^1.3.3"
