--- a/package.json
+++ b/package.json
@@ -52,12 +52,13 @@
     "react-hook-form": "^7.49.3",
     "react-native": "0.72.10",
     "react-native-gesture-handler": "~2.12.0",
-    "react-native-modalize": "^2.1.1",
     "react-native-paper": "^4.12.6",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "expo-location": "~16.1.0",
+    "react-native-maps": "1.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
