--- a/package.json
+++ b/package.json
@@ -2,14 +2,8 @@
   "name": "kiddo-step",
   "version": "1.0.0",
   "authors": [
-    {
-      "name": "Pedro Manuel Kalueka",
-      "email": "pedrokalueca@gmail.com"
-    },
-    {
-      "name": "Tiago Pedro Menenga Bondo",
-      "email": "tiagopedromenengabondo@gmail.com"
-    }
+    "Pedro Manuel Kalueka <pedrokalueca@gmail.com> ",
+    "Tiago Pedro Menenga Bondo <tiagopedromenengabondo@gmail.com>"
   ],
   "keywords": [
     "tracker",
@@ -46,19 +40,20 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
+    "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-hook-form": "^7.49.3",
     "react-native": "0.72.10",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-maps": "1.7.1",
     "react-native-paper": "^4.12.6",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "yup": "^1.3.3",
-    "expo-location": "~16.1.0",
-    "react-native-maps": "1.7.1"
+    "@react-native-async-storage/async-storage": "1.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
