Chore: Add Backgroudn GeoFencing module

--- a/app.json
+++ b/app.json
@@ -11,7 +11,9 @@
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -26,6 +28,9 @@
     },
     "fonts": {
       "Schoolbell": "./assets/fonts/Schoolbell-Regular.ttf"
-    }
+    },
+    "plugins": [
+      "react-native-background-geolocation"
+    ]
   }
 }
