--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "expo-location": "~16.1.0",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "geolib": "^3.3.4",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-hook-form": "^7.49.3",
