--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "axios": "^1.6.8",
     "expo": "~49.0.15",
     "expo-location": "~16.1.0",
+    "expo-notifications": "^0.20.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "geolib": "^3.3.4",
