--- a/package.json
+++ b/package.json
@@ -59,7 +59,8 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "yup": "^1.3.3"
+    "yup": "^1.3.3",
+    "@react-native-community/slider": "4.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
