--- a/app.json
+++ b/app.json
@@ -9,11 +9,9 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#2396f1"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
@@ -29,8 +27,6 @@
     "fonts": {
       "Schoolbell": "./assets/fonts/Schoolbell-Regular.ttf"
     },
-    "plugins": [
-      "react-native-background-geolocation"
-    ]
+    "plugins": ["react-native-background-geolocation"]
   }
 }
