--- a/package.json
+++ b/package.json
@@ -60,7 +60,10 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "yup": "^1.3.3",
-    "@react-native-community/slider": "4.4.2"
+    "@react-native-community/slider": "4.4.2",
+    "expo-task-manager": "~11.3.0",
+    "expo-battery": "~7.3.0",
+    "expo-network": "~5.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
