--- a/package.json
+++ b/package.json
@@ -36,16 +36,28 @@
     "@hookform/resolvers": "^3.3.4",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-community/slider": "4.4.2",
     "@react-native-picker/picker": "2.4.10",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
+    "@tensorflow-models/mobilenet": "^2.1.1",
+    "@tensorflow/tfjs": "^4.19.0",
+    "@tensorflow/tfjs-react-native": "^1.0.0",
     "axios": "^1.6.8",
     "expo": "~49.0.15",
+    "expo-battery": "~7.3.0",
+    "expo-camera": "~13.4.4",
+    "expo-file-system": "~15.4.5",
+    "expo-gl": "~13.0.1",
+    "expo-gl-cpp": "^11.4.0",
+    "expo-image-picker": "~14.3.2",
     "expo-location": "~16.1.0",
+    "expo-network": "~5.4.0",
     "expo-notifications": "^0.20.1",
     "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
+    "expo-task-manager": "~11.3.0",
     "geolib": "^3.3.4",
     "moment": "^2.30.1",
     "react": "18.2.0",
@@ -53,17 +65,14 @@
     "react-native": "0.72.10",
     "react-native-background-geolocation": "^4.16.0",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-maps": "1.7.1",
     "react-native-paper": "^4.12.6",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "yup": "^1.3.3",
-    "@react-native-community/slider": "4.4.2",
-    "expo-task-manager": "~11.3.0",
-    "expo-battery": "~7.3.0",
-    "expo-network": "~5.4.0"
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
